tests/NormalTests/paczka1/fuzzy1/33593784.err
Error in line 1: vCVrw S238 90,6
Error in line 4: ORkQXi A803 2,6
Error in line 14: S238 S238 14,4
Error in line 27: S238 A803 5,8
Error in line 31: S238 S65 80,4
Error in line 36: 0r9O1cA S65 269,75
